# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://docs.python.org/3/distutils/setupscript.html#additional-meta-data
# https://spdx.org/licenses/BSD-3-Clause.html

[metadata]
name = quant
version = attr: quant.__version__
description = quant - QUery ANnotated Text
long_description = file: README.rst
license = BSD-3-Clause
url= https://github.com/AsgardSystems/quant.git
author = Martha L. Escobar-Molano

[options]
install_requires = regex
package_dir= 
    =src
packages=find:

[options.packages.find]
where=src
