# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://docs.python.org/3/distutils/setupscript.html#additional-meta-data
# https://spdx.org/licenses/BSD-3-Clause.html

[metadata]
name = quantx
version = attr: quantx.__version__
description = quantx - QUery ANnotated TeXt
long_description = file: README.rst
license = BSD-3-Clause
url= https://github.com/AsgardSystems/quantx.git
author = Martha L. Escobar-Molano, David A. Barrett

install_requires = python>="3.0"

[options]
install_requires = regex
package_dir= 
    =src
packages=find:

[options.packages.find]
where=src
