# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://docs.python.org/3/distutils/setupscript.html#additional-meta-data
# https://spdx.org/licenses/BSD-3-Clause.html

[metadata]
name = qante
version = attr: qante.__version__
description = qante - Query ANnotated TExt
long_description = file: README.rst
license = BSD-3-Clause
url= https://github.com/AsgardSystems/qante.git
author = Martha L. Escobar-Molano, David A. Barrett
author_email = qante@asgard.com
keywords = text, text processing, search, query, sequences, annotation

classifier = 'Development Status :: 4 - Beta',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Database',
    'Topic :: Internet :: WWW/HTTP :: Indexing/Search',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: General',
    'Topic :: Text Processing :: Filters',
    'Topic :: Text Processing :: Indexing'

install_requires = python>="3.0"

[options]
install_requires = regex
package_dir= 
    =src
packages=find:

[options.packages.find]
where=src
